[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://blocky_game/agent/code_editor_ui.gd" id="1"]

[node name="CodeEditorUI" type="CanvasLayer"]
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -400.0
offset_right = 640.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Python Code Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer/Header"]
layout_mode = 2
text = "X"

[node name="HSeparator1" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="CodeEdit" type="CodeEdit" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RunButton" type="Button" parent="PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Run"

[node name="StopButton" type="Button" parent="PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Stop"

[node name="SpawnAgentButton" type="Button" parent="PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Spawn Agent"

[node name="ClearButton" type="Button" parent="PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Clear Output"

[node name="HelpButton" type="Button" parent="PanelContainer/VBoxContainer/Controls"]
layout_mode = 2
text = "Help"

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="OutputLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Output:"

[node name="OutputConsole" type="TextEdit" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
